fix: spacing in media alignment

--- a/scss/inc/_base.scss
+++ b/scss/inc/_base.scss
@@ -389,11 +389,11 @@ body {
     }
 
     .wrap-left {
-        margin: 0 20px 0 0;
+        margin: 20px 20px 20px 0;
     }
 
     .wrap-right {
-        margin: 0 0 0 20px;
+        margin: 20px 0 20px 20px;
     }
 
     .txt-ctr {
